tests/sumo/spec/distribution/errors/testsuite.sumo
# checks using route distribution with invalid ref
route_invalid_ref

# checks using nested route distribution with invalid external ref
route_nested_invalid_ref
